# llmgui

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml
.agents/: setup
.github/workflows/: release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
